--- a/ProjetoCesae/index.html
+++ b/ProjetoCesae/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sabores da Terra</title>
+    <!-- Colocando logo na aba -->
+    <link rel="icon" type="image/png" href="./src/assets/logo.png" sizes="64x64" />
   </head>
   <body>
     <div id="root"></div>
